# kompose

./: .gitattributes  .gitignore  LICENSE.md  README.md  biome.json  btca.config.jsonc  bts.jsonc  knip.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
.agents/skills/expo-cicd-workflows/scripts/: fetch.js
.codex/environments/: environment.toml
.cursor/: hooks.json
.cursor/rules/: Mobile-Rules.mdc  cli-tools.mdc  docs-maintenance.mdc  drizzle-migrations.mdc
.cursor/skills/effect-best-practices/: SKILL.md
apps/native/: .gitignore  app.json  babel.config.js  eas.json  global.css  metro.config.js  package.json  tailwind.config.ts  tsconfig.json  turbo.json
apps/native/app/: +not-found.tsx  _layout.tsx  modal.tsx
apps/native/app/(drawer)/: _layout.tsx  index.tsx
apps/native/app/(tabs)/: _layout.tsx  calendar.tsx  index.tsx  settings.tsx
apps/native/components/: container.tsx  header-button.tsx  mode-toggle.tsx  sign-in.tsx  sign-up.tsx  social-auth-buttons.tsx
apps/native/components/ai-chat/: attachments.tsx  (+8 more)
apps/native/hooks/: use-color.ts  use-google-accounts.ts  use-google-calendars.ts  use-google-events.ts  use-realtime-sync.ts  use-tasks.ts  use-visible-calendars.ts  useColor.ts  useColorScheme.ts  useKeyboardHeight.ts
apps/native/lib/: android-navigation-bar.tsx  auth-client.ts  color-scheme-context.tsx  env.ts  state-storage.ts  theme-vars.ts  theme.ts  utils.ts  visible-calendars.ts
apps/native/theme/: colors.ts
apps/native/utils/: orpc.ts
apps/web/: .env.example  .gitignore  .tauri.dev.env.example  .tauri.env.example  components.json  global.d.ts  next.config.mts  next.config.ts  package.json  release-dmg.sh  tsconfig.json  turbo.json  vercel.json
apps/web/scripts/: build-desktop-dev.sh  build-desktop.sh
apps/web/src/: index.css  instrumentation.ts  mdx-components.tsx
apps/web/src-tauri/: Cargo.toml  tauri.conf.json  tauri.desktop-dev.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
documents/: ai-chat.md  axiom-trace-explorer.dashboard.json  btca.md  caching.md  command-bar.md  dnd.md  event-popover.md  hotkeys.md  link-parsing.md  maps.md  meeting-links.md  mobile-ai-chat.md  mobile-event-popover.md  mobile-task-popover.md  mobile-theme.md  mobile.md  otel.md  plan.md  privacy-policy.md  queries.md  services.md  state.md  tag-system.md  task-popover.md  tauri.md  temporal.md  terms-of-service.md  whoop.md
(+202 files in other folders)
