[package]
name = "kompose"
version = "0.1.0"
description = "Kompose - Calendar & Task Manager"
authors = ["Nathan Colosimo"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kompose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
window-vibrancy = "0.7.1"

[lints.rust]
# rust-objc's macros still expand with the legacy `feature = "cargo-clippy"`
# check, so declare that cfg value as expected to keep Rust's check-cfg lint
# from warning on every macOS build.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
